Modified navigation bar.

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,13 +1,13 @@
 /* Add a black background color to the top navigation */
 .topnav {
-    background-color: #333;
+    background-color: hsl(0, 7%, 80%);
     overflow: hidden;
   }
   
   /* Style the links inside the navigation bar */
   .topnav a {
     float: left;
-    color: #f2f2f2;
+    color: hwb(0 27% 72%);
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
