Fetching and displaying projects on front end.

--- a/src/app/list/list-item/list-item.component.html
+++ b/src/app/list/list-item/list-item.component.html
@@ -1,5 +1,5 @@
 <div class="item">
-    <h4>{{itemName}}</h4>
-    <p>{{itemDesc}}</p>
-    <p class="small-date">{{itemDate}}</p>
+    <h4>{{itemTitle}}</h4>
+    <p>{{itemDescn}}</p>
+    <p class="small-date">{{itemEffort}}</p>
 </div>
