Modified list-item component to hold a project object rather than a bunch of veriables.

--- a/src/app/list/list-item/list-item.component.html
+++ b/src/app/list/list-item/list-item.component.html
@@ -1,5 +1,5 @@
 <div class="item">
-    <h4>{{itemTitle}}</h4>
-    <p>{{itemDescn}}</p>
-    <p class="small-date">{{itemEffort}}</p>
+    <h4>{{listItem.title}}</h4>
+    <p>{{listItem.descn}}</p>
+    <p class="small-date">{{listItem.effort}}</p>
 </div>
