--- a/src/app/list/list-item/list-item.component.html
+++ b/src/app/list/list-item/list-item.component.html
@@ -1,5 +1,5 @@
 <div class="item">
     <h4>{{listItem.title}}</h4>
     <p>{{listItem.descn}}</p>
-    <p class="small-date">{{listItem.effort}}</p>
+    <p class="small">Effort: {{listItem.effort}}</p>
 </div>
