Added ability to select list items.

--- a/src/app/list/list-item/list-item.component.css
+++ b/src/app/list/list-item/list-item.component.css
@@ -19,3 +19,17 @@
 .small {
     font-size: 0.8em;
 }
+
+#indicator {
+    float: left;
+    width: 5%;
+    height: 3.701em;
+    margin-right: 1%;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+}
+
+/* Highlight box when selected */
+.selected {
+    background-color: #119cc2;
+}
