--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -4,7 +4,7 @@
     <!-- Lists all project items --> 
     <ng-container *ngIf="pList$ | async as pList; else pending">
         <div *ngFor="let project of pList">
-            <app-list-item [listItem]="project" (click)="onSelect(project)"></app-list-item>
+            <app-list-item [listItem]="project"></app-list-item>
         </div>
     </ng-container>
 
