Added ability to delete project items.

--- a/src/app/list/list-item/list-item.component.html
+++ b/src/app/list/list-item/list-item.component.html
@@ -1,5 +1,5 @@
 <div class="item" (click)="onSelect()">
-    <div id="indicator" [ngClass]="{'selected': isSelected}"></div>
+    <div id="indicator" [ngClass]="{'selected': listItem.selected}"></div>
     <h4>{{listItem.title}}</h4>
     <p>{{listItem.descn}}</p>
     <p class="small">Effort: {{listItem.effort}}</p>
