Adding markdown angular component. Creating static file folder on server.

--- a/src/app/showcase/showcase.component.html
+++ b/src/app/showcase/showcase.component.html
@@ -1,3 +1,6 @@
 <div class="half-container">
-    <p>showcase works!</p>
+    <!-- loaded from remote url -->
+    <markdown
+    [src]="'http://localhost:3000/README.md'">
+    </markdown>
 </div>
