--- a/src/app/list/edit-item/edit-item.component.html
+++ b/src/app/list/edit-item/edit-item.component.html
@@ -19,5 +19,6 @@
         <input type="text" name="itemTitle"  placeholder="Project Name"        [(ngModel)]="inTitle"><br>
         <input type="text" name="itemDescn"  placeholder="Project Description" [(ngModel)]="inDescn"><br>
         <input type="text" name="itemEffort" placeholder="Project Effort"      [(ngModel)]="inEffort"><br>
+        <app-fileupload></app-fileupload>
     </div>
 </ng-container>
