Added file upload to backend. Fixed edit/add mode bug in frontend. Added multer expressjs library.

--- a/src/app/fileupload/fileupload.component.html
+++ b/src/app/fileupload/fileupload.component.html
@@ -2,5 +2,5 @@
 
 <div class="file-upload">
    <button (click)="fileUpload.click()"><img class="navimg" src="..\..\assets\clip.svg"></button>
-   {{uploadFiles != null ? uploadFiles[0].name : "Upload markdown file."}}
+   {{uploadFile != null ? uploadFile.name : "Upload markdown file."}}
 </div>
