Issue #1: Completed uniquely associating uploaded files with project list items.

--- a/src/app/showcase/showcase.component.html
+++ b/src/app/showcase/showcase.component.html
@@ -1,6 +1,7 @@
 <div class="half-container">
     <!-- loaded from remote url -->
     <markdown
-    [src]="'http://localhost:3000/README.md'">
+    *ngIf="fileName != null"
+    [src]="'http://localhost:3000/' + fileName">
     </markdown>
 </div>
