Issue #2: Adding ngx-markdown-editor. Installing and testing it.

--- a/src/app/showcase/showcase.component.html
+++ b/src/app/showcase/showcase.component.html
@@ -1,7 +1,8 @@
 <div class="half-container">
     <!-- loaded from remote url -->
-    <markdown
+    <!-- <markdown
     *ngIf="fileName != null"
     [src]="'http://localhost:3000/' + fileName">
-    </markdown>
+    </markdown> -->
+    <app-mdeditor></app-mdeditor>
 </div>
