Issue #2: added ability to mdeditor to retrieve files from server and display their contents.

--- a/src/app/list/list-item/list-item.component.html
+++ b/src/app/list/list-item/list-item.component.html
@@ -1,6 +1,8 @@
 <div class="item" (click)="onSelect()">
     <div id="indicator" [ngClass]="{'selected': listItem.selected}"></div>
-    <h4>{{listItem.title}}</h4>
-    <p>{{listItem.descn}}</p>
-    <p class="small">Effort: {{listItem.effort}}</p>
+    <div id="content">
+        <h4>{{listItem.title}}</h4>
+        <p>{{listItem.descn}}</p>
+        <p class="small">Effort: {{listItem.effort}}</p>
+    </div>
 </div>
