--- a/src/app/showcase/showcase.component.html
+++ b/src/app/showcase/showcase.component.html
@@ -4,5 +4,5 @@
     *ngIf="fileName != null"
     [src]="'http://localhost:3000/' + fileName">
     </markdown> -->
-    <app-mdeditor></app-mdeditor>
+    <app-mdeditor [content]="content"></app-mdeditor>
 </div>
