--- a/src/app/list/list-item/list-item.component.css
+++ b/src/app/list/list-item/list-item.component.css
@@ -1,5 +1,7 @@
 /* Add style to item box */
 .item {
+    display: flex;
+    flex-direction: row;
     background-color: rgb(252,252,252);
     border: 1pt solid black;
     border-radius: 5px;
@@ -17,16 +19,20 @@
 
 /* Add date text style */
 .small {
-    font-size: 0.8em;
+    font-size: 0.8rem;
 }
 
 #indicator {
-    float: left;
     width: 5%;
-    height: 3.701em;
     margin-right: 1%;
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
+}
+
+#content {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
 }
 
 /* Highlight box when selected */
