Issue #2: Adding a placeholder for the editor when not updating any list item. Use subject to emit observable when selecting item.

--- a/src/app/showcase/showcase.component.css
+++ b/src/app/showcase/showcase.component.css
@@ -1,1 +1,19 @@
-/* Control the right side */
+#placeholder {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    border: medium solid lightgrey;
+}
+
+#placeholder:hover {
+    cursor: pointer;
+}
+
+#placeholder h3 {
+    border: medium solid lightgrey;
+    padding: 1em;
+    color: lightgrey;
+    opacity: 0.6;
+}
