--- a/src/app/showcase/showcase.component.html
+++ b/src/app/showcase/showcase.component.html
@@ -4,5 +4,11 @@
     *ngIf="fileName != null"
     [src]="'http://localhost:3000/' + fileName">
     </markdown> -->
-    <app-mdeditor [content]="content"></app-mdeditor>
+    <app-mdeditor [content]="content" *ngIf="editMode; else placeholder"></app-mdeditor>
+
+    <ng-template #placeholder>
+        <div id="placeholder" (click)="onClick()" *ngIf="content != null">
+            <h3>Click to Edit</h3>
+        </div>
+    </ng-template>
 </div>
