--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,5 +1,5 @@
 <div class="half-container" (refresh)="refreshList()">
-    <app-edit-item (delete)="onDelete()" [editItem]="selection"></app-edit-item>
+    <app-edit-item (delete)="onDelete()"></app-edit-item>
 
     <!-- Lists all project items --> 
     <ng-container *ngIf="pList">
