Issue #2: refactoring code so that file is sent as text and saved in DB, rather than the server file system.

--- a/src/app/fileupload/fileupload.component.html
+++ b/src/app/fileupload/fileupload.component.html
@@ -2,5 +2,5 @@
 
 <div class="file-upload">
    <button (click)="fileUpload.click()"><img class="navimg" src="..\..\assets\clip.svg"></button>
-   {{uploadFile != null ? uploadFile.name : "Upload markdown file."}}
+   {{fileName != null ? fileName : "Upload markdown file."}}
 </div>
