--- a/src/app/mdeditor/mdeditor.component.html
+++ b/src/app/mdeditor/mdeditor.component.html
@@ -7,6 +7,7 @@
   [options]="options" 
   (onEditorLoaded)="onEditorLoaded($event)"
   (onPreviewDomChanged)="onPreviewDomChanged($event)"
+  (focusout)="onFocusOut()"
   required 
   maxlength="1000">
   <slot custom-btns></slot>
