--- a/src/app/mdeditor/mdeditor.component.html
+++ b/src/app/mdeditor/mdeditor.component.html
@@ -9,5 +9,7 @@
   (onPreviewDomChanged)="onPreviewDomChanged($event)"
   required 
   maxlength="1000">
-  <slot custom-btns></slot>
+  <slot custom-btns>
+    <app-fileupload></app-fileupload>
+  </slot>
 </md-editor>
