--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,10 @@
-
-<div>
-  <p class="PageTitle">Project One</p>
+<div id="sticky-parallax-header">
+  Project One
+  <div class="topnav">
+    <a class="active" href="#home">Home</a>
+  </div>
+  <div class="flex-half-container">
+    <app-list></app-list>
+    <app-showcase></app-showcase>
+  </div>
 </div>
-<div class="topnav">
-  <a class="active" href="#home">Home</a>
-</div>
-<app-list></app-list>
-<app-showcase></app-showcase>
