--- a/src/app/list/list-item/list-item.component.css
+++ b/src/app/list/list-item/list-item.component.css
@@ -6,6 +6,8 @@
     border: 1pt solid black;
     border-radius: 5px;
     margin: 2%;
+    text-align: left;
+    font-size: small;
 }
 
 .item:hover {
