--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,31 +1,31 @@
 /* Add a black background color to the top navigation */
 .topnav {
-    background-color: hsl(0, 7%, 80%);
     overflow: hidden;
     line-height: 1.2;
+    display: flex;
+    justify-content: center;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;  
   }
   
   /* Style the links inside the navigation bar */
   .topnav a {
     float: left;
-    color: hwb(0 27% 72%);
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
+    background-color: white;
+    color: black;
+    border-left: 1px solid black;
+    border-right: 1px solid black;  
   }
   
   /* Change the color of links on hover */
   .topnav a:hover {
-    background-color: #ddd;
-    color: black;
+     background-color: #55cef0;
   }
   
-  /* Add a color to the active/current link */
-  .topnav a.active {
-    background-color: #04AA6D;
-    color: white;
-  }
 
 /* Add scroll animation to the home page header.
    Using the scroll animation from:
