--- a/src/app/list/edit-item/edit-item.component.css
+++ b/src/app/list/edit-item/edit-item.component.css
@@ -1,13 +1,13 @@
 /* Add a black background color to the top navigation */
 .editnav {
-    background-color: hsl(0, 7%, 80%);
+    background-color: white;
     overflow: hidden;
   }
   
   /* Style the links inside the navigation bar */
   .editnav button {
     float: left;
-    background-color: #119cc2;
+    background-color: rgb(225, 223, 223);
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
