--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
   <div class="topnav">
     <a class="active" href="#home">Home</a>
   </div>
+  <p id="author">Website By: Vlado Smolovic</p>
   <div class="flex-half-container">
     <app-list></app-list>
     <app-showcase></app-showcase>
