Issue #5: Moving author under the title. Removing excess scroll bar from editor.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,11 @@
 <div id="sticky-parallax-header">
-  Project One
+  <div id="animation">
+    <p id="title">Project One</p>
+    <p id="author">Website By: Vlado Smolovic</p>
+  </div>
   <div class="topnav">
     <a class="active" href="#home">Home</a>
   </div>
-  <p id="author">Website By: Vlado Smolovic</p>
   <div class="flex-half-container">
     <app-list></app-list>
     <app-showcase></app-showcase>
