--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -32,12 +32,16 @@
    https://scroll-driven-animations.style/demos/cover-to-fixed-header/css/ */
    @keyframes sticky-parallax-header-move-and-size {
     from {
-      line-height: 100vh;
+      /*line-height: 100vh;*/
       font-size: calc(8vw + 1em);
+      padding-top: calc((105vh - 8vw - 1em)/2);
+      padding-bottom: calc((105vh - 8vw - 1em)/2);
     }
     to {
-      line-height: 15vh;
+      /* line-height: 15vh; */
       font-size: 3em;
+      padding-top: calc((18vh - 4em)/2);
+      padding-bottom: calc((18vh - 4em)/2);
     }
   }
   
@@ -47,18 +51,23 @@
     background-color: white;
     width: 100%;
     top: 0;
+  }
 
-  
+  #animation {
     animation: sticky-parallax-header-move-and-size linear forwards;
     animation-timeline: scroll();
     animation-range: 0vh 130vh;
   }
 
+  #title {
+    margin: 0px;
+  }
+
   #author {
-    font-size: small;
+    font-size: medium;
     line-height: 1.2;
-    margin-top: 16px;
-    margin-bottom: 0px;
+    margin-top: 0px;
+    margin-bottom: 16px;
   }
 
   .flex-half-container {
