Issue #5: Removed extra tool bar around editor. Editing DOM when preview editor option clicked so preview replaces editing section.

--- a/src/styles.css
+++ b/src/styles.css
@@ -23,5 +23,11 @@ body {
     margin: 2.5%; 
     height: 68vh;
     background-color: white;
+  }
+
+  app-list .half-container {
     overflow-y: auto;
+  }
+  app-showcase .half-container {
+    overflow-y: hidden;
   }
