Issue #8: Integrating Authentication Service into front end. Part 1.

--- a/src/app/showcase/showcase.component.html
+++ b/src/app/showcase/showcase.component.html
@@ -8,7 +8,7 @@
 
     <ng-template #placeholder>
         <div id="placeholder" (click)="onClick()">
-            <h3>Click to Edit</h3>
+            <h3>{{holder}}</h3>
         </div>
     </ng-template>
 </div>
