--- a/src/app/list/edit-item/edit-item.component.html
+++ b/src/app/list/edit-item/edit-item.component.html
@@ -1,23 +1,23 @@
 <!-- Bar that shows add, remove / save, cancel icons -->
 <div class="editnav">
     <ng-container *ngIf="editMode; else standBy">
-        <button class="active" (click)="onSave()"><img class="navimg" src="..\..\assets\check.svg"></button>
+        <button class="active" [disabled]="!loggedIn" (click)="onSave()"><img class="navimg" src="..\..\assets\check.svg"></button>
         <button class="active" (click)="onCancel()"><img class="navimg" src="..\..\assets\cross.svg"></button>           
     </ng-container>
     <ng-template #standBy>
-        <button class="active" (click)="onAdd()"><img class="navimg" src="..\..\assets\plus.svg"></button>
+        <button class="active" [disabled]="!loggedIn" (click)="onAdd()"><img class="navimg" src="..\..\assets\plus.svg"></button>
         <ng-container *ngIf="editItem.selected">
-            <button class="active" (click)="onEdit()"><img class="navimg" src="..\..\assets\edit.svg"></button> 
+            <button class="active" [disabled]="!loggedIn" (click)="onEdit()"><img class="navimg" src="..\..\assets\edit.svg"></button> 
         </ng-container>       
-        <button class="active" (click)="onDelete()"><img class="navimg" src="..\..\assets\trash.svg"></button>
+        <button class="active" [disabled]="!loggedIn" (click)="onDelete()"><img class="navimg" src="..\..\assets\trash.svg"></button>
     </ng-template>
 </div>
 
 <ng-container *ngIf="editMode">
     <!-- Form to add event -->
     <div id="addItemForm">
-        <input type="text" name="itemTitle"  placeholder="Project Name"        [(ngModel)]="inTitle"><br>
-        <input type="text" name="itemDescn"  placeholder="Project Description" [(ngModel)]="inDescn"><br>
-        <input type="text" name="itemEffort" placeholder="Project Effort"      [(ngModel)]="inEffort"><br>
+        <input [disabled]="!loggedIn" type="text" name="itemTitle"  placeholder="Project Name"        [(ngModel)]="inTitle"><br>
+        <input [disabled]="!loggedIn" type="text" name="itemDescn"  placeholder="Project Description" [(ngModel)]="inDescn"><br>
+        <input [disabled]="!loggedIn" type="text" name="itemEffort" placeholder="Project Effort"      [(ngModel)]="inEffort"><br>
     </div>
 </ng-container>
