Issue #8: Adding logic to disable editor when not logged in.

--- a/src/app/list/edit-item/edit-item.component.html
+++ b/src/app/list/edit-item/edit-item.component.html
@@ -13,7 +13,7 @@
     </ng-template>
 </div>
 
-<ng-container *ngIf="editMode">
+<ng-container *ngIf="editMode && loggedIn">
     <!-- Form to add event -->
     <div id="addItemForm">
         <input [disabled]="!loggedIn" type="text" name="itemTitle"  placeholder="Project Name"        [(ngModel)]="inTitle"><br>
