--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,24 @@
   <div id="animation">
     <p id="title">Project One</p>
     <p id="author">Website By: Vlado Smolovic</p>
+    <div class="googleButton">
+      <div id="g_id_onload"
+          data-client_id="470042236186-4ktmsh2n5fi48ooagmobbfmdau5rlese.apps.googleusercontent.com"
+          data-context="signin"
+          data-ux_mode="popup"
+          data-callback="onGoogleLogin"
+          data-auto_prompt="false">
+      </div>
+
+      <div class="g_id_signin"
+            data-type="standard"
+            data-shape="rectangular"
+            data-theme="outline"
+            data-text="signin_with"
+            data-size="medium"
+            data-logo_alignment="left">
+      </div>
+    </div>
   </div>
   <div class="topnav">
     <a class="active" href="#home">Home</a>
