--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,17 +7,17 @@
           data-client_id="470042236186-4ktmsh2n5fi48ooagmobbfmdau5rlese.apps.googleusercontent.com"
           data-context="signin"
           data-ux_mode="popup"
-          data-callback="onGoogleLogin"
+          data-callback="handleGoogleLoginResponse"
           data-auto_prompt="false">
       </div>
 
       <div class="g_id_signin"
-            data-type="standard"
-            data-shape="rectangular"
-            data-theme="outline"
-            data-text="signin_with"
-            data-size="medium"
-            data-logo_alignment="left">
+          data-type="standard"
+          data-shape="rectangular"
+          data-theme="outline"
+          data-text="signin_with"
+          data-size="medium"
+          data-logo_alignment="left">
       </div>
     </div>
   </div>
