Issue #8: Still figuring out the google login.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,6 +19,7 @@
           data-size="medium"
           data-logo_alignment="left">
       </div>
+      <a href="https://accounts.google.com/logout">Log Out</a>
     </div>
   </div>
   <div class="topnav">
