--- a/src/app/showcase/showcase.component.html
+++ b/src/app/showcase/showcase.component.html
@@ -8,7 +8,7 @@
 
     <ng-template #placeholder>
         <div id="placeholder" (click)="onClick()">
-            <h3>{{holder}}</h3>
+            <h3>{{loggedIn ? "Click to Edit" : "Click to View"}}</h3>
         </div>
     </ng-template>
 </div>
