Issue #8: Added logout button.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,9 +19,11 @@
           data-size="medium"
           data-logo_alignment="left">
       </div>
+    </div>
+    <div class="logout-btn">
       <a href="https://accounts.google.com/logout">Log Out</a>
     </div>
-  </div>
+    </div>
   <div class="topnav">
     <a class="active" href="#home">Home</a>
   </div>
