--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -88,3 +88,28 @@
   app-showcase, app-list {
     flex: 1 1 0;
   }
+
+  .logout-btn {
+    font-size: small;
+    margin: 0 auto;
+    width: 100px;
+    line-height: 2;
+    border: 1px solid #dadce0;
+    border-radius: 4px;
+    margin-bottom: 8px;
+    display: none;
+  }
+
+  .logout-btn a {
+    color: #3c4043;
+    text-decoration: none;
+    font-family: arial, sans-serif;
+    font-weight: 500;
+    font-size: 14px;
+    letter-spacing: 0.25px;
+  }
+
+  .logout-btn:hover {
+    cursor: pointer;
+    background-color: #fff1f1;
+  }
