--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,10 +20,10 @@
           data-logo_alignment="left">
       </div>
     </div>
-    <div class="logout-btn">
-      <a href="https://accounts.google.com/logout">Log Out</a>
+    <div class="logout-btn" (click)="onLogout()">
+      <p>Log Out</p>
     </div>
-    </div>
+  </div>
   <div class="topnav">
     <a class="active" href="#home">Home</a>
   </div>
