--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -30,7 +30,7 @@
   .googleButton {
     width: 100%;
     margin: 0 auto;
-    display: none;
+    display: flex;
     justify-content: center;
     align-items: center;
     margin-bottom: 8px;
