Issue #10: Changing AboutMe page to an About page. Adding a little content to it.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,7 @@
   </div>
   <div class="topnav">
     <a class="active" routerLink="">Home</a>
-    <a class="active" routerLink="/aboutme">About Me</a>
+    <a class="active" routerLink="/about">About</a>
   </div>
   <router-outlet></router-outlet>
 </div>
