--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -15,10 +15,8 @@
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
-    background-color: white;
+    background-color: rgb(243, 243, 243);
     color: black;
-    border-left: 1px solid black;
-    border-right: 1px solid black;  
   }
   
   /* Change the color of links on hover */
