Issue #9: (2,3,4,5) Created the required files for the subsetsum feature. Still need to properly implement them.

--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -1,4 +1,4 @@
-<div class="half-container" (refresh)="refreshList()">
+<div class="list-container" (refresh)="refreshList()">
     <app-edit-item id="edit-bar" (delete)="onDelete()"></app-edit-item>
 
     <!-- Lists all project items --> 
