--- a/src/app/pages/projectview/projectview.component.html
+++ b/src/app/pages/projectview/projectview.component.html
@@ -1,4 +1,4 @@
 <div class="flex-half-container">
-    <app-list></app-list>
-    <app-showcase></app-showcase>
+    <app-list class="flex-half-container-item"></app-list>
+    <app-showcase class="flex-half-container-item"></app-showcase>
 </div>
