--- a/src/app/components/showcase/showcase.component.html
+++ b/src/app/components/showcase/showcase.component.html
@@ -1,4 +1,4 @@
-<div class="half-container">
+<div class="list-container">
     <!-- loaded from remote url -->
     <!-- <markdown
     *ngIf="fileName != null"
