--- a/src/app/pages/about/about.component.css
+++ b/src/app/pages/about/about.component.css
@@ -38,5 +38,6 @@
   }
 
   .container {
-    width: 90%;
+    width: 90%; /* Put gap between collapsible bar and sides of web page */
+    padding: 2.5% 0 0 0; /* Put gap between collapsible bar and nav bar */
   }
